Added Location and Stats components, and changed a couple of the old components.

--- a/LibrarySystem/Components/App.razor
+++ b/LibrarySystem/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LibrarySystem.styles.css" />
+    <link rel="stylesheet" href="~/common.css"/>
     <link rel="icon" type="image/png" href="images/logohrbotev4-150x150.png" />
     <HeadOutlet />
 </head>
