Added summary comments to the pages and components

--- a/LibrarySystem/Components/Pages/Home.razor
+++ b/LibrarySystem/Components/Pages/Home.razor
@@ -4,3 +4,9 @@
 <Stats></Stats>
 <Admins></Admins>
 <Location></Location>
+
+@code{
+	///<summary>
+	///		This page is the index page of the app, hense it is called home
+	///</summary>
+}
