--- a/LibrarySystem/Components/Pages/PageComponents/Admins.razor
+++ b/LibrarySystem/Components/Pages/PageComponents/Admins.razor
@@ -32,5 +32,7 @@
 </section>
 
 @code {
-
+    ///<summary>
+    ///     This component is used to display the administration of the system
+    ///</summer>
 }
