--- a/LibrarySystem/Components/Pages/PageComponents/Location.razor.css
+++ b/LibrarySystem/Components/Pages/PageComponents/Location.razor.css
@@ -36,3 +36,10 @@
     color: black;
     text-decoration: none;
 }
+#phone{
+    color: black;
+    text-decoration: none;
+}
+#website:hover, #phone:hover{
+    text-decoration: underline;
+}
