--- a/LibrarySystem/Components/Pages/PageComponents/Location.razor
+++ b/LibrarySystem/Components/Pages/PageComponents/Location.razor
@@ -12,7 +12,7 @@
                 <div class="contact">
                     <div class="contact-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px"
-                             fill="#1e1e1e">
+                        fill="#1e1e1e">
                             <path d="M480-480q33 0 56.5-23.5T560-560q0-33-23.5-56.5T480-640q-33 0-56.5 23.5T400-560q0
                                 33 23.5 56.5T480-480Zm0 294q122-112 181-203.5T720-552q0-109-69.5-178.5T480-800q-101 0-170.5 69.5T240-552q0
                                 71 59 162.5T480-186Zm0 106Q319-217 239.5-334.5T160-552q0-150 96.5-239T480-880q127 0 223.5 89T800-552q0
@@ -26,7 +26,7 @@
                 <div class="contact">
                     <div class="contact-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px"
-                             fill="#1e1e1e">
+                        fill="#1e1e1e">
                             <path d="M838-65 720-183v89h-80v-226h226v80h-90l118 118-56 57ZM480-80q-83
                                 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156
                                 31.5T763-763q54 54 85.5 127T880-480q0 20-2 40t-6 40h-82q5-20 7.5-40t2.5-40q0-20-2.5-40t-7.5-40H654q3
@@ -45,14 +45,14 @@
                 <div class="contact">
                     <div class="contact-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px"
-                             fill="#1e1e1e">
+                        fill="#1e1e1e">
                             <path d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14
                                 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9
                                 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26
                                 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
                         </svg>
                     </div>
-                    <div class="contact-info">+359 886 206 364</div>
+                    <a class="contact-info" href="tel: +359 886 206 364" id="phone">+359 886 206 364</a>
                 </div>
             </div>
         </div>
@@ -60,5 +60,7 @@
 </section>
 
 @code {
-
+    ///<summary>
+    ///     This components is used to display the location and the contacts of the school.
+    ///</summary> 
 }
