--- a/LibrarySystem/Components/Pages/PageComponents/Stats.razor
+++ b/LibrarySystem/Components/Pages/PageComponents/Stats.razor
@@ -25,5 +25,7 @@
 </section>
 
 @code {
-
+    ///<summary>
+    ///     This component is used to display the stats of the database and the system
+    ///</summary>
 }
