Added a Database context for the Library in the Data layer

--- a/LibrarySystem/Components/Pages/PageComponents/HomeHead.razor
+++ b/LibrarySystem/Components/Pages/PageComponents/HomeHead.razor
@@ -14,7 +14,7 @@
         <div class="search-bar">
             <div class="im">
                 <input type="text" placeholder="Намери книгата за теб">
-                <button>Чувствам се късметлия</button>
+                <button>Търси   </button>
             </div>
         </div>
     </div>
