--- a/LibrarySystem/Components/Pages/PageComponents/HomeHead.razor.css
+++ b/LibrarySystem/Components/Pages/PageComponents/HomeHead.razor.css
@@ -58,6 +58,7 @@
     width: 100%;
     font-size: 20px;
     padding-top: 10px;
+    padding-left: 10px;
     padding-bottom: 10px;
     margin-bottom: 15px;
     border-radius: 10px;
